--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url = jdbc:postgresql://localhost:5432/test_csrf
 spring.datasource.username = postgres
 spring.datasource.password = postgres
-
+spring.database.driverClassName=org.postgresql.Driver
