settings to configurations and others changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url = jdbc:postgresql://containers-us-west-171.railway.app:6097/railway
+spring.datasource.url = jdbc:postgresql://roundhouse.proxy.rlwy.net:43051/railway
 spring.datasource.username = postgres
-spring.datasource.password = bzdqMGyOhpvZs2rPoE7g
+spring.datasource.password = Ff4b3eEAE6dE513BfaDDbfb2GBG45f6c
 spring.database.driverClassName = org.postgresql.Driver
 
 spring.main.allow-circular-references=true
