Settings to properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:postgresql://roundhouse.proxy.rlwy.net:43051/railway
+spring.datasource.url = jdbc:postgresql://postgres-legacy.railway.internal/railway
 spring.datasource.username = postgres
 spring.datasource.password = Ff4b3eEAE6dE513BfaDDbfb2GBG45f6c
 spring.database.driverClassName = org.postgresql.Driver
