--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password = Ff4b3eEAE6dE513BfaDDbfb2GBG45f6c
 spring.database.driverClassName = org.postgresql.Driver
 
 spring.main.allow-circular-references=true
+
+management.endpoints.web.exposure.include=*
